Update consume types in POST.
