# user-service/src/main/java/software/sigma/klym/userservice/controller/UserOpenController.java
@@ -9,6 +9,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -17,8 +18,6 @@ import software.sigma.klym.error.ApiError;
 import software.sigma.klym.exception.RequestException;
 import software.sigma.klym.userservice.domain.UserRepository;
 import software.sigma.klym.userservice.model.User;
-
-import java.time.LocalDate;
 
 /**
  * User RESTful controller that is used without authentication.
@@ -30,7 +29,7 @@ import java.time.LocalDate;
 @RequestMapping(value = "/api/v1/users")
 public class UserOpenController {
 
-    public static final String INFO_ALREADY_EXISTS = "User with the specified name already exists";
+    public static final String INFO_ALREADY_EXISTS = "User with the specified username or id already exists";
 
     @Autowired
     private UserRepository userRepository;
@@ -53,37 +52,20 @@ public class UserOpenController {
     /**
      * Saves User data.
      *
-     * @param username username
-     * @param firstName first name
-     * @param lastName last name
-     * @param email email
-     * @param password password
-     * @param birthDate date of birthday
+     * @param user user
      * @return saved user
      */
     @Validated
     @ApiOperation(value = "Save User", httpMethod = "POST", response = User.class, notes = "Saves new User.")
     @ApiResponses(value = { @ApiResponse(code = 422, message = INFO_ALREADY_EXISTS, response = ApiError.class) })
     @RequestMapping(method = RequestMethod.POST)
-    public ResponseEntity saveUser(
-            @ApiParam(value = "Username string used to login.", required = true)
-                @RequestParam(value = "username",  required = true) String username,
-            @ApiParam(value = "First name.", required = true)
-                @RequestParam(value = "firstName",  required = true) String firstName,
-            @ApiParam(value = "Last name.", required = true)
-                @RequestParam(value = "lastName",  required = true) String lastName,
-            @ApiParam(value = "Email address.", required = true)
-                @RequestParam(value = "email",  required = true) String email,
-            @ApiParam(value = "Password string used to login.", required = true)
-                @RequestParam(value = "password",  required = true) String password,
-            @ApiParam(value = "Date of birthday.", required = true)
-                @RequestParam(value = "birthDate",  required = true) String birthDate) {
+    public ResponseEntity saveUser(@RequestBody User user) {
 
-        if (userRepository.findByUsername(username) != null) {
+        if (userRepository.findByUsername(user.getUsername()) != null
+                || (user.getId() != null && userRepository.findOne(user.getId()) != null)) {
             throw new RequestException(HttpStatus.UNPROCESSABLE_ENTITY, INFO_ALREADY_EXISTS);
         }
 
-        User user = new User(null, username, firstName, lastName, email, password, LocalDate.parse(birthDate));
         return ResponseEntity.ok().body(userRepository.save(user));
     }
 
